jenkins/jenkins_pipeline_exercise/gitlab-ci-k8s-demo/manifests/ingress.yaml
# ---
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: gitlab-k8s-demo-__CI_ENVIRONMENT_SLUG__
#   namespace: gitlab
#   labels:
#     app: gitlab-k8s-demo
#     ref: __CI_ENVIRONMENT_SLUG__
#   annotations:
#     kubernetes.io/ingress.class: "traefik"
# spec:
#   rules:
#   - host: __CI_ENVIRONMENT_SLUG__-gitlab-k8s-demo.mieken.cn
#     http:
#       paths:
#       - path: /
#         backend:
#           serviceName: gitlab-k8s-demo-__CI_ENVIRONMENT_SLUG__
#           servicePort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-k8s-demo-__CI_ENVIRONMENT_SLUG__
  namespace: gitlab
  labels:
    app: gitlab-k8s-demo
    ref: __CI_ENVIRONMENT_SLUG__
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: __CI_ENVIRONMENT_SLUG__-gitlab-k8s-demo.mieken.cn  # 将域名映射出来
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: gitlab-k8s-demo-__CI_ENVIRONMENT_SLUG__
            port:
              number: 8000
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  labels:
    app.kubernetes.io/component: controller
  name: nginx
  namespace: gitlab
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: k8s.io/ingress-nginx
